Correcciones finalizadas Jaguar

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -51,43 +51,6 @@
 
                                             <span class="radio">
 
-                                                <input id="seis" [(ngModel)]="cuotas" name="seIs"
-                                                    (click)="changeButtonCliente($event.target);"
-                                                    type="radio" value="6">
-                                                <div>
-                                                    <div class="mes">6 meses</div>
-                                                </div>
-                                            </span>
-                                            <span class="radio">
-
-                                                <input id="doce" [(ngModel)]="cuotas" name="doCe"
-                                                    (click)="changeButtonCliente($event.target);"
-                                                    type="radio" value="12">
-                                                <div>
-                                                    <div class="mes">12 meses</div>
-                                                </div>
-                                            </span>
-                                            <span class="radio">
-
-                                                <input id="veintecuatro" [(ngModel)]="cuotas" name="veinteCuatro"
-                                                    (click)="changeButtonCliente($event.target);"
-                                                    type="radio" value="24">
-                                                <div>
-                                                    <div class="mes">24 meses</div>
-                                                </div>
-                                            </span>
-                                            <span class="radio">
-
-                                                <input id="treintaseis" [(ngModel)]="cuotas" name="treintaSeis"
-                                                    (click)="changeButtonCliente($event.target);"
-                                                    type="radio" value="36">
-                                                <div>
-                                                    <div class="mes">36 meses</div>
-                                                </div>
-                                            </span>
-
-                                            <span class="radio">
-
                                                 <input id="cuarentaocho" [(ngModel)]="cuotas" name="cuarentaOcho"
                                                     (click)="changeButtonCliente($event.target);"
                                                     type="radio" value="48">
@@ -103,6 +66,25 @@
                                                         type="radio" value="60">
                                                     <div>
                                                         <div class="mes">60 meses</div>
+                                                    </div>
+                                                </span>
+
+                                                <span class="radio">
+
+                                                    <input id="setentados" [(ngModel)]="cuotas" name="setentaDos"
+                                                        (click)="changeButtonCliente($event.target);"
+                                                        type="radio" value="72">
+                                                    <div>
+                                                        <div class="mes">72 meses</div>
+                                                    </div>
+                                                </span>
+                                                <span class="radio">
+    
+                                                    <input id="ochentacuatro" [(ngModel)]="cuotas" name="ochentaCuatro"
+                                                        (click)="changeButtonCliente($event.target);"
+                                                        type="radio" value="84">
+                                                    <div>
+                                                        <div class="mes">84 meses</div>
                                                     </div>
                                                 </span>
                     
@@ -358,7 +340,7 @@
                   <hr class="hrModal">
                   <div class="btnTyc">
                     <div class="squareModal">
-                            Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Carro Ya) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
+                            Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Jaguar) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
                             El presente Portal es solo un canal para recopilar información personal del solicitante, con la finalidad de poder realizar el estudio crediticio del mismo para la determinación de la aprobación o no del crédito.<br><br>                            
                             El otorgamiento de los planes de financiación anunciados así como las tasas ofrecidas, están sujetas al cumplimiento de las políticas de crédito de las entidades financieras aliadas de Santander Consumer y al perfil crediticio del solicitante.<br><br>
                             
@@ -397,7 +379,7 @@
                         <img class="img-fluid" src="../../../assets/aprobado.png" alt="">
                         <p class="aprobado">¡Tu crédito es viable!</p>
                         <p class="small">
-                            Pronto uno de nuestros asesores te llamara para acompañarte hasta que tengas tu vehículo. Estas a una llamada de tener carro ya
+                            Pronto uno de nuestros asesores te llamara para acompañarte hasta que tengas tu vehículo.
                         </p>
                         <hr>                    
                     </div>
@@ -416,7 +398,7 @@
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 contButton">
-                    <button mat-button class="full-width siguiente" id="stepTwo" (click)="reload()">VOLVER A CARROYA</button>
+                    <button mat-button class="full-width siguiente" id="stepTwo" (click)="reload()">VOLVER A JAGUAR</button>
                 </div>
           </div>
         </div>
