--- a/src/scss/custom-theme.scss
+++ b/src/scss/custom-theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$tucarroform-primary: mat-palette($mat-red, 900);
-$tucarroform-accent: mat-palette($mat-red, 900, 800, 700);
-$tucarroform-warn: mat-palette($mat-red);
+$tucarroform-primary: mat-palette($mat-teal, 900);
+$tucarroform-accent: mat-palette($mat-teal, 900, 800, 700);
+$tucarroform-warn: mat-palette($mat-teal);
 $tucarroform-theme: mat-light-theme($tucarroform-primary, $tucarroform-accent, $tucarroform-warn);
 @include angular-material-theme($tucarroform-theme);
