--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -503,7 +503,7 @@ button{
             grid-column: 1;
             align-self: center;
             justify-self: left;
-            width: 50%;
+            width: 60%;
         }
     }
 
@@ -848,6 +848,10 @@ button{
 
 .mat-form-field-required-marker {
     color: $color-rojo;
+}
+
+.mat-step-text-label{
+    padding: 5px;
 }
   
 
