--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-btn-activo: #0F9FDC;
+$color-btn-activo: #C3092F;
 $color-btn-disabled: #C2C2C2;
 $grisOscuro: rgba(194, 194, 194, 0.747);
 $grissOscuro: #666674;
