--- a/src/scss/custom-theme.scss
+++ b/src/scss/custom-theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$tucarroform-primary: mat-palette($mat-light-blue, A400);
-$tucarroform-accent: mat-palette($mat-light-blue, A400, 800, 700);
-$tucarroform-warn: mat-palette($mat-light-blue);
+$tucarroform-primary: mat-palette($mat-red, A700);
+$tucarroform-accent: mat-palette($mat-grey, 900);
+$tucarroform-warn: mat-palette($mat-grey, 900);
 $tucarroform-theme: mat-light-theme($tucarroform-primary, $tucarroform-accent, $tucarroform-warn);
 @include angular-material-theme($tucarroform-theme);
