--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-transparent:transparent;
 $color-negro: #000000;
 $color-rojo: #F10024;
 $gris-tenue: #e9e9e9be;
+$gris-transparente: #E1E2E2;
 $gris: #ebebeb;
 
 /* Responsive */
