--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -1,6 +1,6 @@
 <div class="titlesPpal row">
     <div class="col-12 text-center titleOne">
-            <strong>Solicita la aprobación de tu crédito para comprar un Volkswagen, rápido y sin papeles</strong>
+            <strong>Solicita la aprobación de tu crédito para comprar un Nissan, rápido y sin papeles</strong>
     </div>
 </div>
 
@@ -15,7 +15,7 @@
       <hr class="hrModal">
       <div class="btnTyc">
         <div class="squareModal">
-                Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Volkswagen) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
+                Es requisito indispensable que el solicitante, entendido este como cualquier persona natural o jurídica que acceda al presente Portal (Nissan) y desee iniciar una solicitud para estudio de viabilidad de financiación de vehículo automotor con Santander Consumer Finance S.A.S (En adelante “Santander Consumer”), entienda y acepte de manera expresa, voluntaria e irrevocable los términos y condiciones que a continuación se indican:<br><br>
                 El presente Portal es solo un canal para recopilar información personal del solicitante, con la finalidad de poder realizar el estudio crediticio del mismo para la determinación de la aprobación o no del crédito.<br><br>                            
                 El otorgamiento de los planes de financiación anunciados así como las tasas ofrecidas, están sujetas al cumplimiento de las políticas de crédito de las entidades financieras aliadas de Santander Consumer y al perfil crediticio del solicitante.<br><br>
                 
@@ -200,7 +200,6 @@
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6 mb-3">
                             <mat-form-field class="full-width" appearance="outline">
-                                    <mat-label>Tipo de Identificación</mat-label>
                                     <select 
                                         matNativeControl
                                         name="TipoDocumento"
@@ -276,7 +275,6 @@
 
                     <div class="col-12 col-sm-12 col-12-md col-12-lg mb-3">
                         <mat-form-field class="full-width" appearance="outline">
-                                <mat-label>Tipo de ocupación</mat-label>
                                 <select 
                                     matNativeControl
                                     name="ActividadEconomica"
@@ -381,7 +379,7 @@
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 contButton">
-                    <button mat-button class="full-width siguiente" id="stepTwo" (click)="reload()">VOLVER A VOLKSWAGEN</button>
+                    <button mat-button class="full-width siguiente" id="stepTwo" (click)="reload()">VOLVER A NISSAN</button>
                 </div>
           </div>
         </div>
