Mazda Vardí Cálculos Finalizados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,8 @@
 <div class="principal row grid animated fadeIn">
     <div class="encMercadolibre">
         <div class="logos">
+            <img class="santanderWt" src="../assets/logoDos.png" alt="">
             <img class="mercadolibreT" src="../assets/logo.png" alt="">
-            <img class="mercadolibreM" src="../assets/logo.png" alt="">
-            <img class="santanderWt" src="../assets/consumerFinance.png" alt="">
         </div>
     </div>
     <app-form-step></app-form-step>
