--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-btn-activo: #C3092F;
+$color-btn-activo: #138ED6;
 $color-btn-disabled: #C2C2C2;
 $grisOscuro: rgba(194, 194, 194, 0.747);
 $grissOscuro: #666674;
@@ -12,6 +12,7 @@ $color-rojo: #F10024;
 $gris-tenue: #e9e9e9be;
 $gris-transparente: #E1E2E2;
 $gris: #ebebeb;
+$numeroStep: #138ED6;
 
 /* Responsive */
 
