--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,8 +6,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Nissan Brand;
+    font-family: Roboto;
     transition: all 0.5s;
+  }
+
+  app-form-step{
+    margin-top: 10%;
   }
 
   .mat-form-field-appearance-outline .mat-form-field-wrapper {
@@ -28,7 +32,7 @@
   }
 
   .mat-horizontal-stepper-header .mat-step-icon-selected{
-    background-color: #c3092f !important;
+    background-color: $numeroStep !important;
   }
 
 /* Color Step background fondo */
@@ -61,7 +65,7 @@
     opacity: 0;
     display: grid;
     grid-template-rows: 1fr 2fr 1fr;
-    background-color: #ffffff;
+    background-color: $color-mercadolibre;
     z-index: 0;
     height: 100%;
     position: absolute;
@@ -81,7 +85,7 @@
             grid-row: 2;
             align-self: end;
             justify-self: center;
-            color: $color-negro;
+            color: $color-white;
         }
     
 }
@@ -335,61 +339,6 @@ button:focus {
     padding: 8px;
 }
 
-/* .containerModal {
-    z-index: 0;
-    position: absolute;
-    background-color: $color-white;
-    margin: 2px 21px 0px 22px;
-    top: 9rem; */
-
-    /* @include mSmall(){
-        width: 55%;
-    } */
-    
-    /* @include tablet(){
-        width: 54%;
-        top: 17rem;
-    }
-    @include deskopt(){
-        width: 41%;
-        top: 13rem;
-    }
-    @include bigScreen(){
-        width: 36.5%;
-    }    
-    .squareModal{
-        z-index: 1;
-        background-color: $color-white;
-        overflow: auto;
-        height: 58rem;
-        font-size: 12px;
-        padding: 0px 18px 0px 18px;
-        text-align: justify;
-        @include sSmall(){
-            height: 54rem;
-        }
-        @include mSmall(){
-            height: 52rem;
-        }
-        @include lSmall(){
-            height: 51rem;
-        }
-        @include tablet(){
-            height: 46rem;            
-        }
-        @include deskopt(){
-            height: 52rem;
-        }
-        @include bigScreen(){
-            margin: 0px 0px 0px 36px;
-            height: 45rem;
-            .contButton{
-                margin: 20px 0px 15px 10px;
-            }
-        }
-    }
-} */
-
 .santanderGray{
     @include tablet(){
         display: none;
@@ -492,102 +441,64 @@ button{
 }
 
 .encMercadolibre{
-    background-color: $gris;
+    background-color: $color-negro;
     display: grid;
-    grid-template-columns: 10% 1fr 10%;
+    grid-template-columns: auto 1fr auto;
     position: fixed !important;
     width: 100%;
     z-index: 2;
     top: 0;
     @include tablet(){
-        background-color: #ffffff; 
+        grid-template-columns: 27% 1fr 27%;
     }
     @include deskopt(){
         grid-template-columns: 27% 1fr 27%;
-        background-color: #ffffff; 
     }
     @include bigScreen(){
-        grid-template-columns: 27% 1fr 27%;
-        background-color: #ffffff; 
+        grid-template-columns: 27% 1fr 27%; 
     }
 
     .logos{
         display: grid;
         grid-column: 2;        
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: auto 1fr auto;
         grid-gap: 30px;
-
-        @include tablet(){
-            grid-template-columns: 100px 210px;
         }
 
-        @include deskopt(){
-            grid-template-columns: 100px 210px;
-        }
-
-        @include bigScreen(){
-            grid-template-columns: 100px 210px;
-        }
-
-        }
-
-    /* .logos{
-        display: grid;
-        grid-column: 2;
-        grid-template-columns: repeat(2, 1fr);
-        @include tablet(){
-            grid-template-columns: repeat(3, 1fr);
-            width: 70%;
-            margin: 0 auto;
-        }
-        @include deskopt(){
-            grid-template-columns: repeat(4, 1fr);
-            width: 50%;
-        }
-        @include bigScreen(){
-            grid-template-columns: repeat(4, 1fr);
-            width: 50%;
-        } 
-    }*/
-    img.mercadolibreM{
-        width: 35%;
+    img.santanderWt{
+        width: 100%;
         grid-column: 1;
         align-self: center;
         justify-self: center;
-    }
-
-    img.santanderWt{
-        width: 50%;
-        grid-column: 2;
-        align-self: center;
-        justify-self: center;
+        padding: 20% 10%;
         @include tablet(){
-            width: 60%;
-            justify-self: left;
+            padding: 10% 10%;
         }
         @include deskopt(){
-            width: 70%;
-            justify-self: left;
+            padding: 10% 10%;
         }
         @include bigScreen(){
-            width: 60%;
-            justify-self: left;
+            padding: 10% 10%;
         }
     }
+
     img.mercadolibreT{
-        display: none;
-    }
-    @include tablet(){
+        display: block;
+        grid-column: 3;
+        align-self: center;
+        justify-self: center;
         height: 80px;
-        img.mercadolibreM{
-            display: none;
+        padding: 3%;
+        padding: 20% 10%;
+
+        @include tablet(){
+            padding: 10% 10%;
         }
-        img.mercadolibreT{
-            display: block;
-            grid-column: 1;
-            align-self: center;
-            justify-self: center;
-            height: 80px;
+        @include deskopt(){
+            padding: 10% 10%;
+        }
+        @include bigScreen(){
+            padding: 10% 10%;
         }
     }
 
@@ -617,41 +528,6 @@ button{
             margin: 0 auto;
     }
 }
-
-/* .row.principal.grid{
-    background-color: $color-transparent;
-    margin: 0px !important;
-    display: block;
-    @include deskopt(){
-        display: grid;
-        grid-template-columns: 0fr 2fr 0.7fr;
-        app-form-step{
-            grid-column: 2;
-        }
-    }  
-    @include bigScreen(){
-        display: grid;
-        grid-template-columns: 0fr 2fr 0.7fr;
-        app-form-step{
-            grid-column: 2;
-        }
-    }  
-} */
-
-/* .mat-stepper-horizontal, .mat-stepper-vertical {
-    background-color: transparent;
-    padding: 10px;
-    @include tablet(){
-        width: 60%;
-        margin: 0 auto;
-    }
-    @include deskopt(){
-        width: 60%;
-    }
-    @include bigScreen(){
-        width: 50%;
-    }
-} */
 
 .pie{
     img{
@@ -769,18 +645,6 @@ button{
     width: 95%;
     height: 50px;
     border: none;
-  
-    /* @include tabletLaptop() {
-      border-radius: 15px;
-    }
-  
-    @include laptopDesktop() {
-      border-radius: 15px;
-    }
-  
-    @include desktopFull() {
-      border-radius: 15px;
-    } */
   }
   
   .radio {
@@ -791,14 +655,6 @@ button{
       background-color: white;
       border: 2px solid #000 !important;
       font-weight: 800;
-  
-      /* @include laptopDesktop() {
-        border-radius: 15px;
-      }
-  
-      @include desktopFull() {
-        border-radius: 15px;
-      } */
     }
   }
   
@@ -817,13 +673,6 @@ button{
       z-index: 1;
       width: 95%;
       height: 100%;
-  
-      /* @include laptopDesktop() {
-        min-height: 150px;
-      }
-      @include desktopFull() {
-        min-height: 150px;
-      } */
     }
   
     div {
@@ -840,21 +689,6 @@ button{
         color: $color-negro;
         align-self: center;
         text-align: center;
-  
-        /* @include tabletLaptop() {
-          font-size: 18px;
-          font-weight: 600;
-        }
-  
-        @include laptopDesktop() {
-          font-size: 18px;
-          font-weight: 600;
-        }
-  
-        @include desktopFull() {
-          font-size: 18px;
-          font-weight: 600;
-        } */
       }
     }
   }
