--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -401,7 +401,7 @@ button:focus {
 }
 
 hr{
-    border: 1px solid $gris-transparente !important;
+    border: 1px solid $grisOscuro !important;
     margin-top: 0 !important;
 }
 
