--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <div class="principal row grid animated fadeIn">
     <div class="encMercadolibre">
         <div class="logos">
-            <img class="santanderWt" src="../assets/logoDos.png" alt="">
+            <!-- <img class="santanderWt" src="../assets/logoDos.png" alt=""> -->
             <img class="mercadolibreT" src="../assets/logo.png" alt="">
         </div>
     </div>
