--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -500,7 +500,7 @@ button{
         justify-self: center;
         height: 80px;
         padding: 3%;
-        padding: 20% 10%;
+        padding: 20% 20%;
 
         @include tablet(){
             padding: 10% 10%;
@@ -796,6 +796,10 @@ button{
     @include tablet(){
         padding: 20px;
     }
+}
+
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+    background-color: $numeroStep !important;
 }
   
 
